Minor styling fix for icon-line on mobile devices

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -139,8 +139,18 @@ body {
     }
 
     @media (max-width: 575px) {
+        flex-direction: column;
         justify-content: center;
+        align-items: center;
         text-align: center;
+
+        &.card {
+            i {
+                margin-right: 0px;
+                margin-bottom: 12px;
+                font-size: 30px;
+            }
+        }
     }
 }
 
